# finam-sdk

./: Cargo.toml  build.rs
examples/: main.rs
protos/grpc/tradeapi/v1/: trade.proto
protos/grpc/tradeapi/v1/accounts/: accounts_service.proto
protos/grpc/tradeapi/v1/marketdata/: marketdata_service.proto
protos/grpc/tradeapi/v1/orders/: orders_service.proto
src/: auth.rs  lib.rs  main.rs  proto.rs  request.rs  stream.rs
