[package]
name = "finam"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.45.1", features = ["full"] }
tonic = { version = "0.13", features = ["gzip", "tls-ring", "tls-native-roots"] }

[build-dependencies]
tonic-build = "0.13"
