[package]
name = "finam-sdk"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
keywords = ["investing", "invest", "finam"]
description = "Finam API Sdk"
repository = "https://github.com/bool-rus/finam-sdk"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
log = "0.4.27"
prost = "0.13"
prost-types = "0.13"
simple_logger = "5.0.0"
tokio = "1.45.1"
tonic = { version = "0.13", features = ["gzip", "tls-ring", "tls-native-roots"] }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
